<resources>
    <string name="app_name">HeadBook</string>
    <string name="LogBTN">Login</string>
    <string name="RegistrarBTN">Registrarme</string>




    <string name="RegistroTXT">REGISTRO</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Telefono</string>
    <string name="Direccion">Direccion</string>
    <string name="Correo">Escriba Correo</string>
    <string name="Password">Escriba Contraseña</string>
    <string name="REGISTRARUSUARIO">REGISTRARME</string>

</resources>